--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -53,6 +53,6 @@
                 </div>
             </article>
         </main>
-        
+      <script src="js/nav.js"></script>  
     </body>
 </html>
